--- a/index.html
+++ b/index.html
@@ -240,6 +240,20 @@
                         class="w-full h-full">
                     </iframe>
                 </div>
+                
+                <!-- Sección de video adicional que has solicitado -->
+                <h3 class="text-2xl font-semibold text-center mt-12 mb-6">Nuevo Video del Documental</h3>
+                <div class="video-container max-w-4xl mx-auto">
+                    <!-- Reemplaza esta URL con el enlace de tu video de YouTube -->
+                    <iframe 
+                        src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                        title="Nuevo Video" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen
+                        class="w-full h-full">
+                    </iframe>
+                </div>
 
                 <!-- Galería de imágenes del realizador y el documental -->
                 <h3 class="text-2xl font-semibold text-center mt-12 mb-6">Galería</h3>
