--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                 <!-- Entrevista de YouTube -->
                 <h3 class="text-2xl font-semibold text-center mb-6">Entrevista con el Realizador</h3>
                 <div class="video-container max-w-4xl mx-auto">
-                    <!-- Aquí se ha incluido el enlace a la entrevista de YouTube. Puedes reemplazarlo si cambias el video. -->
+                    <!-- Se ha incluido el enlace que proporcionaste en tu solicitud anterior -->
                     <iframe 
-                        src="https://www.youtube.com/embed/VIbM1ZYGLkE" 
+                        src="https://www.youtube.com/embed/jPho0_frmXU?start=6" 
                         title="YouTube video player" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -241,13 +241,13 @@
                     </iframe>
                 </div>
                 
-                <!-- Sección de video adicional que has solicitado -->
+                <!-- Sección de video adicional (CORREGIDO) -->
                 <h3 class="text-2xl font-semibold text-center mt-12 mb-6">Nuevo Video del Documental</h3>
                 <div class="video-container max-w-4xl mx-auto">
-                    <!-- Reemplaza esta URL con el enlace de tu video de YouTube -->
+                    <!-- Se ha actualizado este enlace con el que proporcionaste en esta solicitud -->
                     <iframe 
-                        src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-                        title="Nuevo Video" 
+                        src="https://www.youtube.com/embed/Qgiqh40j-F4" 
+                        title="Nuevo Video del Documental" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen
