--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="video-container">
                     <!-- Aquí se ha incluido el enlace al trailer de YouTube. Puedes reemplazarlo si cambias el video. -->
                     <iframe 
-                        src="https://www.youtube.com/embed/AX3COImzXbo" 
+                        src="https://www.youtube.com/embed/AX3COImzXco" 
                         title="YouTube video player" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -171,7 +171,7 @@
                 </div>
                 
                 <div class="md:flex md:space-x-8">
-                    <!-- Ficha Técnica -->
+                    <!-- Ficha Técnica y Detalles del Artículo -->
                     <div class="md:w-1/2 mb-8 md:mb-0">
                         <h3 class="text-2xl font-semibold mb-4 border-b border-gray-400 pb-2">Ficha Técnica</h3>
                         <ul class="space-y-2 text-lg">
@@ -186,6 +186,11 @@
                             <li><strong>Fotografía:</strong> Martín Alvarez, Volkmar Ziegler, Miguelángel Tisera</li>
                             <li><strong>Género:</strong> Documental</li>
                         </ul>
+
+                        <h3 class="text-2xl font-semibold mb-4 mt-8 border-b border-gray-400 pb-2">Próximos Eventos</h3>
+                        <p class="text-lg mb-2">Próximamente estará participando en el <strong>Festival de Cine Cumbe San Agustín</strong>.</p>
+                        <p class="text-lg mb-2">También fue seleccionado oficialmente para competir en el <strong>VI International Heritage Film Festival</strong> (Portugal); así como para el International Ecological TV Festival “To save and preserve” (Rusia); y el Lift-Global Network (Reino Unido).</p>
+                        <p class="text-lg mb-2">De la mano del Circuito Gran Cine y con el apoyo del Centro Nacional Autónomo de Cinematografía (Cnac), el trabajo audiovisual estará en las principales salas de cine del país a partir del 10 de octubre.</p>
                     </div>
                     <!-- Sinopsis y más -->
                     <div class="md:w-1/2">
@@ -193,10 +198,11 @@
                         <p class="text-lg mb-4">
                             “Vestigios de conocimientos ancestrales” es un viaje cinematográfico que relata el encuentro con la historia de los pobladores originarios de Sudamérica. La travesía se adentra en monumentos naturales y sitios arqueológicos de Venezuela, enfrentando diversos acontecimientos que permiten vislumbrar el futuro de territorios mágicos, como el archipiélago de Los Roques y la selva amazónica. Allí, el documental registra los petroglifos más grandes del país y reflexiona sobre el pasado, presente y futuro de las culturas ancestrales, antes de que las lluvias vuelvan a ocultar estos tesoros históricos.
                         </p>
-                        <h3 class="text-2xl font-semibold mb-4 mt-8 border-b border-gray-400 pb-2">Rodaje y Colaboradores</h3>
-                        <p class="text-lg mb-2"><strong>Locaciones:</strong> Archipiélago de Los Roques, Alto Orinoco, Puerto Ayacucho, Universidad Simón Bolívar.</p>
-                        <p class="text-lg mb-2"><strong>Colaboradores destacados:</strong> Aimé Tillett (antropólogo), Andrzej Antczak (arqueólogo), Mario Sanoja (arqueólogo), entre otros.</p>
-                        <p class="text-lg"><strong>Festivales:</strong> Participó en el Festival del Cine Venezolano de Mérida y Heritales (Portugal).</p>
+                        <h3 class="text-2xl font-semibold mb-4 mt-8 border-b border-gray-400 pb-2">Créditos del Artículo</h3>
+                        <p class="text-lg mb-2"><strong>Artículo de Alba Caracas</strong></p>
+                        <p class="text-lg mb-2">Cuenta con relatos de los representantes indígenas <strong>José Gregorio Mirabal</strong> y <strong>Wisiyuma Danielito Hernández</strong> de los Yekuana; <strong>Otilio Santos</strong> de la etnia Wotija; <strong>Luis Chatiba</strong> de los Yanomami; <strong>Guillermo Arana</strong>, vocero de la comunidad del Autana; la periodista Wayuu <strong>Gloria Jusayu</strong> y la poeta Kariña, <strong>Morella Maneiro</strong>.</p>
+                        <p class="text-lg mb-2">También cuenta con entrevistas al antropólogo <strong>Aimé Tillett</strong>, a los doctores en arqueología <strong>Andrzej Antczak</strong> y <strong>María Magdalena Antczak</strong>, así como al recordado <strong>Mario Sanoja</strong> y a <strong>Iraida Vargas</strong>, por nombrar algunos.</p>
+                        <p class="text-lg mb-2">El documental, con guion y dirección de Tisera, bajo la producción de <strong>Donald Myerston, Viveca Baiz, Ana Cecilia Ramírez</strong> y del propio director, fue realizado durante casi diez años. Las entrevistas se hicieron durante 2015, 2016, 2019 y 2021, contando con el apoyo de la Universidad Simón Bolívar y el Cnac.</p>
                     </div>
                 </div>
             </div>
@@ -214,15 +220,14 @@
                     <div class="md:w-2/3 text-left">
                         <h3 class="text-2xl font-semibold mb-4 border-b border-gray-400 pb-2">Biografía y Trayectoria</h3>
                         <p class="text-lg mb-4">
-                            Miguelángel Tisera es un director, productor y guionista de cine y televisión argentino, nacido en Buenos Aires en 1958. Con una trayectoria que abarca varias décadas, ha desarrollado la mayor parte de su carrera profesional en Venezuela, país al que llegó en 1978. Su obra se caracteriza por una búsqueda constante de la poesía y la esencia cultural, explorando la identidad latinoamericana, las raíces ancestrales y la conexión entre el ser humano y su territorio.
+                            Miguelángel Tisera es un director, productor y guionista de cine y televisión argentino, nacido en Buenos Aires en 1958. Ha sido reconocido por dirigir “El Imperio de los Piratas” (2002), “Biography Oscar D’León el sonero del mundo” (2003) y el largometraje “Un Pueblo Unido” (2010), entre decenas de trabajos audiovisuales.
                         </p>
-                        <h3 class="text-2xl font-semibold mb-4 mt-8 border-b border-gray-400 pb-2">Filmografía Destacada</h3>
-                        <ul class="list-disc list-inside space-y-1 text-lg">
-                            <li>Vestigios de conocimientos ancestrales (2023)</li>
-                            <li>Vestigios de Conocimientos Ancestrales: Hallazgos (2015)</li>
-                            <li>Gaia (2014)</li>
-                            <li>Series documentales como “Manos y Cerebro” (1990-1991)</li>
-                        </ul>
+                        <p class="text-lg mb-4">
+                            Desde 2011 hasta 2023 fue director en Cine&TV MAT Hypermedia y fue guionista del largometraje “Tango Tropical, así como de 10 microprogramas de “Mundo en el Museo” y 40 de “Best Sellers”, ambos para la cadena A&E Mundo.
+                        </p>
+                        <p class="text-lg mb-4">
+                            Como productor ha trabajado en más de 200 micros de presentación y despedida para The History Channel LA, y ha dirigido y escrito los guiones del video “El conde del Guácharo en vivo” (1988); “Los Hombres de Guayana (12 cortometrajes documentales – 1991); 1992 “Cuadernos Lagoven en Cine: Manos y Cerebro” (serie documental de 4 minutos cada uno – 1992); además de comerciales y otros trabajos audiovisuales.
+                        </p>
                     </div>
                 </div>
                 
@@ -258,14 +263,14 @@
                 <h3 class="text-2xl font-semibold text-center mt-12 mb-6">Galería</h3>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
                     <!-- Reemplaza estas URL con tus propias fotos. -->
-                    <img src="https://placehold.co/600x400/0ea5e9/ffffff?text=Imagen+1" alt="Imagen del documental 1" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="https://placehold.co/600x400/0ea5e9/ffffff?text=Imagen+2" alt="Imagen del documental 2" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="https://placehold.co/600x400/0ea5e9/ffffff?text=Imagen+3" alt="Imagen del documental 3" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="https://placehold.co/600x400/0ea5e9/ffffff?text=Imagen+4" alt="Imagen del documental 4" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="https://placehold.co/600x400/0ea5e9/ffffff?text=Imagen+5" alt="Imagen del documental 5" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="https://placehold.co/600x400/0ea5e9/ffffff?text=Imagen+6" alt="Imagen del documental 6" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="https://placehold.co/600x400/0ea5e9/ffffff?text=Imagen+7" alt="Imagen del documental 7" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="https://placehold.co/600x400/0ea5e9/ffffff?text=Imagen+8" alt="Imagen del documental 8" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="vestigiosancestrales/public/images/v1.jpg" alt="Imagen del documental 1" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="vestigiosancestrales/public/images/v2.jpg" alt="Imagen del documental 2" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="vestigiosancestrales/public/images/v3.jpg" alt="Imagen del documental 3" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="vestigiosancestrales/public/images/v4.jpg" alt="Imagen del documental 4" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="vestigiosancestrales/public/images/v5.jpg" alt="Imagen del documental 5" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="vestigiosancestrales/public/images/v6.jpg" alt="Imagen del documental 6" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="vestigiosancestrales/public/images/v1.jpg" alt="Imagen del documental 7" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="vestigiosancestrales/public/images/v2.jpg" alt="Imagen del documental 8" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
                 </div>
 
             </div>
