--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                 
                 <!-- Video de Trailer de YouTube -->
                 <div class="video-container">
-                    <!-- Aquí se ha incluido el enlace al trailer de YouTube. Puedes reemplazarlo si cambias el video. -->
+                    <!-- Enlace del trailer de Dailymotion -->
                     <iframe 
-                        src="https://www.youtube.com/embed/AX3COImzXco" 
-                        title="YouTube video player" 
+                        src="https://dai.ly/x975084"
+                        title="Dailymotion video player" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen
@@ -202,7 +202,7 @@
                         <p class="text-lg mb-2"><strong>Artículo de Alba Caracas</strong></p>
                         <p class="text-lg mb-2">Cuenta con relatos de los representantes indígenas <strong>José Gregorio Mirabal</strong> y <strong>Wisiyuma Danielito Hernández</strong> de los Yekuana; <strong>Otilio Santos</strong> de la etnia Wotija; <strong>Luis Chatiba</strong> de los Yanomami; <strong>Guillermo Arana</strong>, vocero de la comunidad del Autana; la periodista Wayuu <strong>Gloria Jusayu</strong> y la poeta Kariña, <strong>Morella Maneiro</strong>.</p>
                         <p class="text-lg mb-2">También cuenta con entrevistas al antropólogo <strong>Aimé Tillett</strong>, a los doctores en arqueología <strong>Andrzej Antczak</strong> y <strong>María Magdalena Antczak</strong>, así como al recordado <strong>Mario Sanoja</strong> y a <strong>Iraida Vargas</strong>, por nombrar algunos.</p>
-                        <p class="text-lg mb-2">El documental, con guion y dirección de Tisera, bajo la producción de <strong>Donald Myerston, Viveca Baiz, Ana Cecilia Ramírez</strong> y del propio director, fue realizado durante casi diez años. Las entrevistas se hicieron durante 2015, 2016, 2019 y 2021, contando con el apoyo de la Universidad Simón Bolívar y el Cnac.</p>
+                        <p class="text-lg mb-2">El documental, con guion y dirección de Tisera, bajo la producción de <strong>Donald Myerston (Productor Ejecutivo), Viveca Baiz, Ana Cecilia Ramírez</strong> y del propio director, fue realizado durante casi diez años. Las entrevistas se hicieron durante 2015, 2016, 2019 y 2021, contando con el apoyo de la Universidad Simón Bolívar y el Cnac.</p>
                     </div>
                 </div>
             </div>
@@ -262,15 +262,15 @@
                 <!-- Galería de imágenes del realizador y el documental -->
                 <h3 class="text-2xl font-semibold text-center mt-12 mb-6">Galería</h3>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
-                    <!-- Reemplaza estas URL con tus propias fotos. -->
-                    <img src="vestigiosancestrales/public/images/v1.jpg" alt="Imagen del documental 1" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="vestigiosancestrales/public/images/v2.jpg" alt="Imagen del documental 2" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="vestigiosancestrales/public/images/v3.jpg" alt="Imagen del documental 3" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="vestigiosancestrales/public/images/v4.jpg" alt="Imagen del documental 4" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="vestigiosancestrales/public/images/v5.jpg" alt="Imagen del documental 5" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="vestigiosancestrales/public/images/v6.jpg" alt="Imagen del documental 6" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="vestigiosancestrales/public/images/v1.jpg" alt="Imagen del documental 7" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="vestigiosancestrales/public/images/v2.jpg" alt="Imagen del documental 8" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <!-- Rutas de imágenes corregidas -->
+                    <img src="/public/images/v1.jpg" alt="Imagen del documental 1" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v2.jpg" alt="Imagen del documental 2" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v3.jpg" alt="Imagen del documental 3" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v4.jpg" alt="Imagen del documental 4" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v5.jpg" alt="Imagen del documental 5" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v6.jpg" alt="Imagen del documental 6" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v1.jpg" alt="Imagen del documental 7" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v2.jpg" alt="Imagen del documental 8" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
                 </div>
 
             </div>
