--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="video-container">
                     <!-- Enlace del trailer de Dailymotion -->
                     <iframe 
-                        src="https://dai.ly/x975084"
+                        src="https://youtu.be/gRe5Mywmuy4?si=BxRoQgy3Tv3Yo3yO"
                         title="Dailymotion video player" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -269,8 +269,8 @@
                     <img src="/public/images/v4.jpg" alt="Imagen del documental 4" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
                     <img src="/public/images/v5.jpg" alt="Imagen del documental 5" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
                     <img src="/public/images/v6.jpg" alt="Imagen del documental 6" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="/public/images/v1.jpg" alt="Imagen del documental 7" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="/public/images/v2.jpg" alt="Imagen del documental 8" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v7.jpg" alt="Imagen del documental 7" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v8.jpg" alt="Imagen del documental 8" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
                 </div>
 
             </div>
@@ -521,3 +521,4 @@
 
 </body>
 </html>
+
