--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                 
                 <!-- Video de Trailer de YouTube -->
                 <div class="video-container">
-                    <!-- Enlace del trailer de Dailymotion -->
+                    <!-- Enlace del tráiler de YouTube actualizado -->
                     <iframe 
-                        src="https://youtu.be/gRe5Mywmuy4?si=BxRoQgy3Tv3Yo3yO"
-                        title="Dailymotion video player" 
+                        src="https://www.youtube.com/embed/gRe5Mywmuy4?start=8"
+                        title="YouTube video player" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen
@@ -268,9 +268,9 @@
                     <img src="/public/images/v3.jpg" alt="Imagen del documental 3" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
                     <img src="/public/images/v4.jpg" alt="Imagen del documental 4" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
                     <img src="/public/images/v5.jpg" alt="Imagen del documental 5" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="/public/images/v6.jpg" alt="Imagen del documental 6" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="/public/images/v7.jpg" alt="Imagen del documental 7" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
-                    <img src="/public/images/v8.jpg" alt="Imagen del documental 8" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v6.jpeg" alt="Imagen del documental 6" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v1.jpg" alt="Imagen del documental 7" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
+                    <img src="/public/images/v2.jpg" alt="Imagen del documental 8" class="rounded-lg w-full h-48 object-cover shadow-lg hover:scale-105 transition-transform">
                 </div>
 
             </div>
@@ -521,4 +521,3 @@
 
 </body>
 </html>
-
